--- a/index.html
+++ b/index.html
@@ -166,12 +166,9 @@
             <!-- Contact -->
               <article id="contact">
                 <h2 class="major">default.</h2>
-                <p>restoring basic functions</p>
+                <p>restoring your body basic functions</p>
                 <p>
-                  QR code →<br>
-                  simple page<br>
-                  or direct message<br>
-                  or calendar
+                 <a href="https://calendly.com/default-movement/30min">Let's start</a>
                 </p>
               </article>
 
@@ -198,3 +195,4 @@
 
   </body>
 </html>
+
