--- a/index.html
+++ b/index.html
@@ -230,7 +230,6 @@ section:nth-child(7) .semi{ top:-100px; left:50%; transform:translateX(-50%); cl
     </ul>
     <p>The goal is not endurance.</p>
     <p>The goal is sensing what works and what doesn’t.</p>
-    <p>Self-assessment is the foundation of TUA.</p>
   </div>
 </section>
 
@@ -249,7 +248,6 @@ section:nth-child(7) .semi{ top:-100px; left:50%; transform:translateX(-50%); cl
       <li>look for shortcuts</li>
       <li>just want to sweat</li>
       <li>delegate everything to someone else</li>
-      <li>want to be entertained</li>
     </ul>
   </div>
 </section>
@@ -258,7 +256,7 @@ section:nth-child(7) .semi{ top:-100px; left:50%; transform:translateX(-50%); cl
   <div class="semi"></div>
   <div class="container">
     <h1>default<span class="dot">.</span></h1>
-    <p><a href="https://calendly.com/default-movement/30min" target="_blank">Book a first session</a></p>
+    <p><a href="https://calendly.com/default-movement/30min" target="_blank">Let's Start</a></p>
   </div>
 </section>
 
