--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ section:nth-child(7) .semi{ top:-100px; left:50%; transform:translateX(-50%); cl
 <section>
   <div class="container">
     <h1>default<span class="dot">.</span></h1>
-    <p>restoring the body's default functions</p>
+    <p>restoring the body's basic functions</p>
   </div>
 </section>
 
@@ -196,8 +196,8 @@ section:nth-child(7) .semi{ top:-100px; left:50%; transform:translateX(-50%); cl
       <li>nasal breathing only</li>
       <li>control before fatigue</li>
     </ul>
-    <p>Timed sets are containers.</p>
-    <p>What happens inside — quality, focus, control — determines the work.</p>
+    <p>Timed sets are containers.
+       What happens inside — quality, focus, control — determines the work.</p>
     <p>The last repetition must be equal to or better than the first.</p>
   </div>
 </section>
